Plein de truc surtout beaucoup de fichier

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,1 +1,70 @@
-{}
+{
+  "actualLocale": "en",
+  "articleShowMore": "Show description",
+  "articleReadArticle": "Read article",
+  "articleDateInYear": "Il y a {year} an",
+  "articleDateInYears": "Il y a {year} ans",
+  "articleDateInMonth": "Il y a {month} mois",
+  "articleDateInMonths": "Il y a {month} mois",
+  "articleDateInDay": "Il y a {day} jour",
+  "articleDateInDays": "Il y a {day} jours",
+  "articleDateInHour": "Il y a {hours} heure",
+  "articleDateInHours": "Il y a {hours} heures",
+  "articleDateInMinute": "Il y a {minutes} minute",
+  "articleDateInMinutes": "Il y a {minutes} minutes",
+  "articleNoSource": "Unknow source",
+  "articleNoDesc": "No description",
+
+  "filterSelect" : "Choose a filter",
+  "filterDefault" : "Default filter",
+  "filterCustom" : "Custom filter",
+
+  "snackBarReminderSet": "Reminder set",
+  "snackBarReminderUnset": "Reminder deleted",
+  "snackBarFavoritesSet": "Article add to favorite",
+  "snackBarFavoritesUnset": "Article deleted from favorite",
+
+  "profilUser": "User info",
+  "profilUpdateUsername": "Change your username",
+  "profilUpdateMail": "Change your mail",
+  "profilUpdateAvatar": "Change your avatar",
+  "profilUpdatePassword": "Change your password",
+  "profilDisconnect": "Logout",
+  "profilThemeTitle": "Theme",
+  "profilDarkTheme": "Night mode",
+  "profilColorSelect": "Main color",
+  "profilLangTitle": "Language",
+  "profilLangLabel": "Choose a Language",
+  "profilLangFr":"Français",
+  "profilLangEn":"English",
+  "profilLangDe":"Deutsch",
+  "profilLangEs":"Español",
+  "profilLangJp":"日本の",
+
+
+  "inscriptionTitle": "Sign up",
+  "inscriptionMsgFieldsEmpty": "Fill this input",
+  "inscriptionLabelMail": "Mail",
+  "inscriptionMsgWrongMail": "Wrong mail",
+  "inscriptionLabelPseudo": "Username",
+  "inscriptionMsgWrongPseudo": "Wrong username",
+  "inscriptionLabelMdp": "Password",
+  "inscriptionMsgWrongPassword": "Wrong password",
+  "inscriptionLabelConfPassword": "Password confirm",
+  "inscriptionMsgWrongConfPassword": "Wrong password confrim",
+  "inscriptionMsgMdpNoMatch": "Password doesn't match",
+  "inscriptionButtonValidation": "Sign up",
+  "inscriptionMailAlreadyUsed": "Mail already used",
+  "inscriptionSuccess": "Done",
+
+  "connexionTitle": "Sign in",
+  "connexionLabelMail": "Mail",
+  "connexionLabelPassword": "Password",
+  "connexionLabelRememberMe": "Remember me",
+  "connexionLabelButtonConnexion": "Submit",
+  "connexionLabelGoToInscription": "Sign up",
+  "connexionMsgWrongMail": "Wrong mail",
+  "connexionMsgWrongPassword": "Wrong password",
+  "connexionMsgConnectionError": "Error while attempting to connect",
+  "connexionCloseError": "OK"
+}
