--- a/lib/l10n/intl_fr.arb
+++ b/lib/l10n/intl_fr.arb
@@ -1,1 +1,69 @@
-{}
+{
+  "actualLocale": "fr",
+  "articleShowMore": "En savoir plus",
+  "articleReadArticle": "Lire l'article",
+  "articleDateInYear": "Il y a {year} an",
+  "articleDateInYears": "Il y a {year} ans",
+  "articleDateInMonth": "Il y a {month} mois",
+  "articleDateInMonths": "Il y a {month} mois",
+  "articleDateInDay": "Il y a {day} jour",
+  "articleDateInDays": "Il y a {day} jours",
+  "articleDateInHour": "Il y a {hours} heure",
+  "articleDateInHours": "Il y a {hours} heures",
+  "articleDateInMinute": "Il y a {minutes} minute",
+  "articleDateInMinutes": "Il y a {minutes} minutes",
+  "articleNoSource": "Pas de source",
+  "articleNoDesc": "Pas de description",
+
+  "filterSelect" : "Choisir un filtre",
+  "filterDefault" : "Filtre par default",
+  "filterCustom" : "Filtre perso",
+
+  "snackBarReminderSet": "Rappel ajouté",
+  "snackBarReminderUnset": "Rappel supprimé",
+  "snackBarFavoritesSet": "Article ajouté aux favoris",
+  "snackBarFavoritesUnset": "Article supprimé des favoris",
+
+  "profilUser": "Info Profil",
+  "profilUpdateUsername": "Modifier votre pseudo",
+  "profilUpdateMail": "Modifier votre mail",
+  "profilUpdateAvatar": "Modifier votre avatar",
+  "profilUpdatePassword": "Modifier votre mot de passe",
+  "profilDisconnect": "Déconnexion",
+  "profilThemeTitle": "Theme",
+  "profilDarkTheme": "Mode nuit",
+  "profilColorSelect": "Couleur principale",
+  "profilLangTitle": "Langue",
+  "profilLangLabel": "Choisir une langue",
+  "profilLangFr":"Français",
+  "profilLangEn":"English",
+  "profilLangDe":"Deutsch",
+  "profilLangEs":"Español",
+  "profilLangJp":"日本の",
+
+  "inscriptionTitle": "Inscription",
+  "inscriptionMsgFieldsEmpty": "Veuillez remplir le champs",
+  "inscriptionLabelMail": "Mail",
+  "inscriptionMsgWrongMail": "Mail non conforme",
+  "inscriptionLabelPseudo": "Pseudo",
+  "inscriptionMsgWrongPseudo": "Pseudo non conforme",
+  "inscriptionLabelMdp": "Mot de passe",
+  "inscriptionMsgWrongPassword": "Mot de passe non conforme",
+  "inscriptionLabelConfPassword": "Confirmation du mot de passe",
+  "inscriptionMsgWrongConfPassword": "Confirmation du mot de passe non conforme",
+  "inscriptionMsgMdpNoMatch": "Les mots de passe ne correspondent pas",
+  "inscriptionButtonValidation": "Inscription",
+  "inscriptionMailAlreadyUsed": "Email déjà utilisé",
+  "inscriptionSuccess": "Inscription réussi",
+
+  "connexionTitle": "Connexion",
+  "connexionLabelMail": "Mail",
+  "connexionLabelPassword": "Mot de passe",
+  "connexionLabelRememberMe": "Se souvenir de moi",
+  "connexionLabelButtonConnexion": "Connexion",
+  "connexionLabelGoToInscription": "S'inscrire",
+  "connexionMsgWrongMail": "Mail non conforme",
+  "connexionMsgWrongPassword": "Mot de passe non conforme",
+  "connexionMsgConnectionError": "Erreur lors de la connexion",
+  "connexionCloseError": "OK"
+}
