--- a/lib/l10n/intl_fr.arb
+++ b/lib/l10n/intl_fr.arb
@@ -40,6 +40,16 @@
   "profilLangDe":"Deutsch",
   "profilLangEs":"Español",
   "profilLangJp":"日本の",
+  "profilUserName":"Pseudo",
+  "profilLastName":"Nom",
+  "profilFirstName":"Prénom",
+  "profilSaveModifications":"Enregistrer",
+  "profilAddress":"Adresse",
+  "profilZipCode":"Code Postal",
+  "profilCity":"Ville",
+  "profilPhoneNumber":"Numéro de téléphone",
+  "profilMail":"Adresse email",
+  "profilGenre":"Genre",
 
   "inscriptionTitle": "Inscription",
   "inscriptionMsgFieldsEmpty": "Veuillez remplir le champs",
